--- a/AMS/Protokoll/Auswertung_Gasdetektor.tex
+++ b/AMS/Protokoll/Auswertung_Gasdetektor.tex
@@ -50,7 +50,7 @@ In den Abbildungen \ref{Auswertung_Gasdetektor_2DSpektren_blank}, \ref{Auswertun
         \centering
         \includegraphics[width=\linewidth]{Pictures/Gasdetektor/3_blank_CD.png}
     \end{subfigure}
-    \caption{2D-Spektren der Anoden in der Gasionisationskammer ohne Probe, live-Zeit von $t_{\text{live}} = \SI{1245}{\second}$}
+    \caption{2D-Spektren der Anoden in der Gasionisationskammer ohne Probe, live-Zeit von $t_{\text{live}} = \SI{1245}{\second}$. \#Kanal meint die gezählten Ereignisse für jedes dargestellte Kanalpaar. Die markierten Bereiche sind das Vermächtnis von verschiedenen Teilchenspezies, die verschieden viel Energie in den unterschiedlichen Bereichen des Detektors verlieren. Identifiziert wurden (vor eintreten in den Detektor): 2 (grün) - $^{9}\text{Be}^{4+}$, 3 (grau) - $^{10}\text{B}^{4+}$, 4 (blau) - $^{10}\text{B}^{3+}$.}
     \label{Auswertung_Gasdetektor_2DSpektren_blank}
 \end{figure}
 \begin{figure}[H]
@@ -67,7 +67,7 @@ In den Abbildungen \ref{Auswertung_Gasdetektor_2DSpektren_blank}, \ref{Auswertun
         \centering
         \includegraphics[width=\linewidth]{Pictures/Gasdetektor/22_standard_CD.png}
     \end{subfigure}
-    \caption{2D-Spektren der Anoden in der Gasionisationskammer mit BeO-Probe, live-Zeit von $t_{\text{live}} = \SI{474}{\second}$}
+    \caption{2D-Spektren der Anoden in der Gasionisationskammer mit BeO-Probe, live-Zeit von $t_{\text{live}} = \SI{474}{\second}$. \#Kanal meint die gezählten Ereignisse für jedes dargestellte Kanalpaar. Die markierten Bereiche sind das Vermächtnis von verschiedenen Teilchenspezies, die verschieden viel Energie in den unterschiedlichen Bereichen des Detektors verlieren. Identifiziert wurden (vor eintreten in den Detektor): 1 (pink) - $^{10}\text{Be}^{4+}$, 2 (grün) - $^{9}\text{Be}^{4+}$.}
     \label{Auswertung_Gasdetektor_2DSpektren_BeO}
 \end{figure}
 \begin{figure}[H]
@@ -84,7 +84,7 @@ In den Abbildungen \ref{Auswertung_Gasdetektor_2DSpektren_blank}, \ref{Auswertun
         \centering
         \includegraphics[width=\linewidth]{Pictures/Gasdetektor/19_probe_CD.png}
     \end{subfigure}
-    \caption{2D-Spektren der Anoden in der Gasionisationskammer mit unbekannter Probe, live-Zeit von $t_{\text{live}} = \SI{845}{\second}$}
+    \caption{2D-Spektren der Anoden in der Gasionisationskammer mit unbekannter Probe, live-Zeit von $t_{\text{live}} = \SI{845}{\second}$. \#Kanal meint die gezählten Ereignisse für jedes dargestellte Kanalpaar. Die markierten Bereiche sind das Vermächtnis von verschiedenen Teilchenspezies, die verschieden viel Energie in den unterschiedlichen Bereichen des Detektors verlieren.  Identifiziert wurden (vor eintreten in den Detektor): 1 (pink) - $^{10}\text{Be}^{4+}$, 2 (grün) - $^{9}\text{Be}^{4+}$.}
     \label{Auswertung_Gasdetektor_2DSpektren_unbekannt}
 \end{figure}
 Um die Markierten Bereiche etwas besser zu verstehen sind im Folgenden noch zwei TRIM-Simulationen visualisiert, bei denen die Ionisierung des Isobutan über der Eindringtiefe zweier Ionen aufgetragen ist:
