--- a/AMS/Protokoll/bibliography.bib
+++ b/AMS/Protokoll/bibliography.bib
@@ -10,3 +10,17 @@
     title = {Schematik Ionisationskamer},
     howpublished = {Bereitgestellte Praktikumsanleitung}
     }
+
+@misc{SRIM_Software,
+    author = {James F. Ziegler},
+    year = {2008},
+    title = {Stopping and Range of Ions in Matter},
+    howpublished = {\url{http://srim.org/}}
+    }
+
+@misc{IAEA_chart,
+    author = {IAEA Nuclear Data Section},
+    year = {2009-2021},
+    title = {Live Chart of Nuclides},
+    howpublished = {\url{https://www-nds.iaea.org/relnsd/vcharthtml/VChartHTML.html}}
+    }
