--- a/AMS/Protokoll/diskussion.tex
+++ b/AMS/Protokoll/diskussion.tex
@@ -2,7 +2,7 @@
 
 Alle Aufgabenteile konnten erfolgreich abgeschlossen werden.
 
-Im Niedrigenergiebereich wurden fünf verschiedene Proben auf ihre zusammensetzung untersucht.
+Im Niedrigenergiebereich wurden fünf verschiedene Proben auf ihre Zusammensetzung untersucht.
 Dabei konnten in der 153BeO die Teilchen $^{16}$O$^{1-}$, $^{9}$Be$^{16}$O$^{1-}$ und $^{12}$C$^{16}$O$^{1-}$ bzw. $^{28}$Si$^{1-}$ nachgewiesen werden.
 In den anderen Proben konnten diverse andere Teilchen, darunter bereits erwähnte mit anderen Nukliden sowie AlO gefunden werden.
 Zusätzlich wurden einige unbekannte Stoffe gefunden, die wir in diesem Praktikum nicht genauer identifizieren konnten.
@@ -44,5 +44,5 @@ Wir konnten feststellen, dass die Konzentration scheinbar linear mit zunehmender
 Dies haben wir so erklärt, dass $^{10}$Be durch Ereignisse mit kosmischer Strahlung entsteht und tieferliegende Proben aufgrund ihres Alters daher weniger $^{10}$Be enthalten müssen.
 Nach dieser Erklärung sollte eigentlich ein exponentieller Abfall stattfinden, was wir aber weder ausschließen noch bestätigen können.
 Weitere Proben zur Messung könnten diese Frage aber beantworten.
-Eine Verfälschung der Proben durch hochenergetische Strahlung aus anderen Quellen ist potentiell möglich, würde aber nichts am abnehmen der Konzentration ändern.
-Eine Neutronenquelle im inneren der Probe würde das Ergebnis entsprechend ändern können, ist aber unwahrscheinlich.
+Eine Verfälschung der Proben durch hochenergetische Strahlung aus anderen Quellen ist potentiell möglich, würde aber nichts am Abnehmen der Konzentration ändern.
+Eine Neutronenquelle im Inneren der Probe würde das Ergebnis entsprechend ändern können, ist aber unwahrscheinlich.
