--- a/AMS/Protokoll/Auswertung_mit_kali.tex
+++ b/AMS/Protokoll/Auswertung_mit_kali.tex
@@ -19,7 +19,7 @@ Ionen mit einer anderen Masse oder anderem Ladungszustand haben im Magneten eine
 Negative Ionen mit einem anderen Ladungszustand als 1 treten jedoch nur sehr selten auf.
 (Tatsächlich lässt sich wie in Gleichung \ref{Auswertung_eq_Magnet} zu sehen nur nach $\frac{\sqrt{m_{\text{ion}}}}{q_{\text{ion}}}$ selektieren.
 Ionen mit vierfacher Masse und doppelter Ladung würden also auch weiterkommen. Andere Ladungszustände entstehen beim sputtern jedoch sehr selten, und derart schwere Teilchen sind fast gar nicht in der Probe vorhanden.)
-An dieser Stelle lässt sich jedoch nicht unterscheiden zwischen Molekularen isobaren, so zum Beispiel zwischen $^{10}\text{Be}^{16}\text{O}^{-}$ und $^{9}\text{Be}^{17}\text{O}^{-}$ (wobei $^{17}\text{O}$ in der Natur sehr selten vorkommt) oder $^{10}\text{Be}^{16}\text{O}^{-}$ und $^{10}\text{B}^{16}\text{O}^{-}$ ($^{10}\text{B}$ entsteht beim Beta-Zerfall von $^{10}\text{Be}$).
+An dieser Stelle lässt sich jedoch nicht unterscheiden zwischen molekularen Isobaren, so zum Beispiel zwischen $^{10}\text{Be}^{16}\text{O}^{-}$ und $^{9}\text{Be}^{17}\text{O}^{-}$ (wobei $^{17}\text{O}$ in der Natur sehr selten vorkommt) oder $^{10}\text{Be}^{16}\text{O}^{-}$ und $^{10}\text{B}^{16}\text{O}^{-}$ ($^{10}\text{B}$ entsteht beim Beta-Zerfall von $^{10}\text{Be}$).
 Ebenfalls wichtig ist, dass hier keine leichten Moleküle oder Ionen mit einem anderen Ladungszustand als 1 vorkommen, theoretisch vorhandene schwere Moleküle könnten jedoch hier mit höheren Ladungszuständen auftauchen.
 Für $\rho$ war ein Wert von \SI{0.4}{\metre} gegeben.
 Damit ergeben sich für einfach negativ geladene Ionen folgende benötigte Magnetfeldstärken:
@@ -53,12 +53,12 @@ Unsicherheiten der Beschleunigungsspannungen und des Spulenradius werden hier ni
 Diese wiederrum wäre ebenfalls am besten experimentell (z.B. mittels Hall-Sonde) zu bestimmen.
 Leider haben wir dies in dem Versuch nicht gemacht.
 
-In Abb. \ref{lowenergy} sind jetzt die Messungen dargestellt.
-Zur Identifikation betrachten wir als erstes die 153BeO Probe.
+In Abb. \ref{lowenergy} sind alle Messungen dargestellt.
+Zur Identifikation betrachten wir aber als Erstes die 153BeO Probe.
 Die aufgenommenen Intensitäten sind in Abb. \ref{Probe_Be} zu sehen.
 Die berechneten Massen in Tabelle \ref{153Be}.
-Die Höhe der Peaks wird für die folgende Analyse nicht betrachtet, da das Amperemeter des Faraday-Cup gerade an den Maxima häufig übersteuert hat und wir damit keinen zuverlässigen Messwert haben.
-\begin{table}[h]
+Die Höhe der Peaks wird für Teile der folgende Analyse nicht betrachtet, da das Amperemeter des Faraday-Cup gerade an den Maxima häufig übersteuert hat und wir damit keinen zuverlässigen Messwert haben.
+\begin{table}[H]
     \centering
     \caption{Berechnung der Massen im Niedrigenergiebereich für Probe 153Be.}
     \begin{tabular}{|c |c|}
@@ -80,7 +80,7 @@ Die entsprechenden Massen sind hier gut zuordbar, was bei einer reinen Probe auc
 \end{itemize}
 Letztere sind auch einfach durch Verschmutzungen der Probe mit Luft zu erklären.
 Theoretisch könnte hier auch $^{10}$Be$^{18}$O$^{1-}$ gemessen werden, beide Isotope sind jedoch bereits für sich alleine selten, ein mit Faraday-Cup messbarer Strom von diesen Molekülen ist dementsprechend nicht zu erwarten.
-Außerdem müsste in diesen Fall ein zusätzllicher Peak bei \SI{18}{\atomicmassunit} für $^{18}$O$^{1-}$ gesehen werden, da auch $^{16}$O$^{1-}$ identifiziert wurde, welches in gleichem Maß Ionen bildet.
+Außerdem müsste in diesen Fall ein zusätzlicher Peak bei \SI{18}{\atomicmassunit} für $^{18}$O$^{1-}$ gesehen werden, da auch $^{16}$O$^{1-}$ identifiziert wurde, welches in gleichem Maß Ionen bildet.
 \begin{figure}[H]
 	\centering
     \includegraphics[width=0.85\textwidth]{Pictures/LE_BeO_neu.pdf}
@@ -93,10 +93,10 @@ Eine Erklärung dieser Masse wären $^{12}$C$^{1-}$ Ionen, welche aus der Probe 
 
 In Tabelle \ref{KY_rest} sind die Peaks der Probe KY13 und die dazu passenden Ionen dargestellt.
 Bei den gemessenen Strömen ist zu beachten, dass wir aufgrund der Vollausschläge bei einigen Strömen keinen Messwert am Peak hatten.
-Ein Vergleich der Intensitäten hier ist daher nicht unbedingt aussagekräftig, die entsprechenden Intensitäten sind zur Vollständigkeit jeodch in Abb. \ref{lowenergy} dargestellt..
-\begin{table}[h]
+Ein Vergleich der Intensitäten hier ist daher nicht unbedingt aussagekräftig, die entsprechenden Intensitäten sind zur Vollständigkeit jeodch in Abb. \ref{lowenergy} dargestellt.
+\begin{table}[H]
     \centering
-    \caption{Identifizierung der Ionen am Magneten. Bei Teilchen die mit ? markiert wurden sind wir uns unsicher. Es sind nicht alle möglichen Ionen aufgelistet, manchmal sind eine Vielzahl an Kombinationen möglich.}
+    \caption{Identifizierung der Ionen am Magneten. Bei Teilchen die mit ? markiert wurden sind wir uns unsicher. Es sind nicht alle möglichen Ionen aufgelistet, manchmal sind eine Vielzahl an Kombinationen möglich. Eingeklammerte Intensitäten waren übersteuert.}
     \begin{tabular}{|c|c|c|c|c|}
         \hline
         Probe & I$_{\text{Magnet}}$ / \si{\ampere} & I$_{\text{gemessen}}$ / \si{\ampere} & m / \si{\atomicmassunit} & Teilchen \\
@@ -104,16 +104,16 @@ Ein Vergleich der Intensitäten hier ist daher nicht unbedingt aussagekräftig, 
         \multirow{14}*{KY13} & \num{42.205} & (\num{-1.216} $\cdot$ $10^{-7}$) & \num{11.9} & $^{12}$C$^{1-}$ \\
  		                     & \num{44.009} & \num{-4.579} $\cdot$ $10^{-8}$   & \num{13.0} & $^{13}$C$^{1-}$ \\
                 		     & \num{48.82}  & ($10^{-4}$)                      & \num{16.0} & $^{16}$O$^{1-}$ \\
-		                     & \num{50.423} & (\num{-6.664} $\cdot$ $10^{-8}$) & \num{17.1} & $^{17}$O$^{1-}$ \\
-		                     & \num{51.927} & (\num{-8.388} $\cdot$ $10^{-8}$) & \num{18.1} & $^{10}$O$^{1-}$ \\
+		                     & \num{50.423} & (\num{-6.664} $\cdot$ $10^{-8}$) & \num{17.1} & $^{17}$O$^{1-}$, $^{16}$O$^{1}$H$^{1-}$\\
+		                     & \num{51.927} & (\num{-8.388} $\cdot$ $10^{-8}$) & \num{18.1} & $^{18}$O$^{1-}$ \\
 		                     & \num{59.944} & (\num{-2.926} $\cdot$ $10^{-7}$) & \num{24.1} & $^{12}$C$_{2}^{1-}$ ?  \\
 		                     & \num{61.147} & (\num{-6.527} $\cdot$ $10^{-6}$) & \num{25.1} & $^{9}$Be$^{16}$O$^{1-}$ \\
-		                     & \num{62.55}  & \num{-8.547} $\cdot$ $10^{-9}$   & \num{26.2} & $^{10}$Be$^{16}$O$^{1-}$, $^{26}$Al$^{1-}$, $^{9}$BeH$^{16}$O$^{1-}$ \\
-		                     & \num{64.755} & (\num{-1.680} $\cdot$ $10^{-7}$) & \num{28.1} & $^{12}$C$^{16}$O$^{1-}$ \\
-		                     & \num{65.958} & \num{-5.040} $\cdot$ $10^{-9}$   & \num{29.1} & $^{17}$O$^{12}$C$^{1-}$, $^{16}$O$^{13}$C$^{1-}$ \\
-		                     & \num{69.265} & (\num{-2.344} $\cdot$ $10^{-7}$) & \num{32.2} & $^{16}$O$_{2}^{1-}$  \\
+		                     & \num{62.55}  & \num{-8.547} $\cdot$ $10^{-9}$   & \num{26.2} & $^{10}$B$^{16}$O$^{1-}$, $^{9}$Be$^{1}$H$^{16}$O$^{1-}$ \\
+		                     & \num{64.755} & (\num{-1.680} $\cdot$ $10^{-7}$) & \num{28.1} & $^{12}$C$^{16}$O$^{1-}$, $^{28}$Si$^{1-}$ \\
+		                     & \num{65.958} & \num{-5.040} $\cdot$ $10^{-9}$   & \num{29.1} & $^{17}$O$^{12}$C$^{1-}$, $^{16}$O$^{13}$C$^{1-}$, $^{29}$Si$^{1-}$ \\
+		                     & \num{69.265} & (\num{-2.344} $\cdot$ $10^{-7}$) & \num{32.2} & $^{16}$O$_{2}^{1-}$, $^{32}$S$^{1-}$ \\
 		                     & \num{73.675} & (\num{-3.302} $\cdot$ $10^{-8}$) & \num{36.4} & $^{18}$O$_{2}^{1-}$ ?  \\
-		                     & \num{78.486} & \num{-5.783} $\cdot$ $10^{-7}$   & \num{41.3} & $^{26}$Al$^{16}$O$^{1-}$ \\
+		                     & \num{78.486} & \num{-5.783} $\cdot$ $10^{-7}$   & \num{41.3} & $^{9}$Be$^{32}$S$^{1-}$ \\
 		                     & \num{80.59}  & $10^{-8}$                        & \num{43.6} & $^{27}$Al$^{16}$O$^{1-}$ \\
     \hline
     \end{tabular}
@@ -125,7 +125,7 @@ Nicht perfekt zuordbare Peaks lassen sich wahrscheinlich auf Verschmutzungen ode
 Eine Analyse dieser könnte möglicherweise auch auf der Peakhöhe aufbauen, um z. B. zufällige Verschmutzungen durch entsprechend geringe Intensität als solche zu erkennen.
 Dafür müsste man jedoch sicherstellen, dass das Amperemeter des Faraday-Cups nicht übersteuert wird.
 
-\begin{figure}[h]
+\begin{figure}[H]
 \begin{subfigure}{\textwidth}
 \centering
 \includegraphics[width=.95\linewidth]{Pictures/LE_samples_current.png}
@@ -179,12 +179,12 @@ Damit ergeben sich für entstandene Ionen eine Energie nach dem Beschleuniger vo
 
 Zu beachten ist hier, dass $^9$Be aus $^{9}$Be$^{16}$O stammt und $^{10}$Be aus $^{10}$Be$^{16}$O.
 $^{16}$O kann daher prinzipiell von beiden Molekülen stammen.
-Sauerstoffionen die von $^{9}$Be$^{16}$O stammen haben dabei eine um ca. $110$ keV höhere Energie, sind, sollten aber auch nur einen entsprechend geringen Anteil ausmachen.
+Sauerstoffionen die von $^{9}$Be$^{16}$O stammen haben dabei eine um ca. $110$ keV höhere Energie, sollten aber auch nur einen entsprechend geringen Anteil ausmachen.
 
 \subsection{Faraday-Cups}
 Nachdem wir nun Ionen mit hoher Geschwindigkeit nach dem Beschleuniger haben können wir versuchen, häufig auftretende Nuklide nachzuweisen.
 Aufgrund der hohen Anteile dieser Nuklide im Telichenstrahl entsteht durch sie ein nennenswerter Ladungsstrom der mit Faraday-Cups gemessen werden kann.
-Um einzelne Ionsorten detektieren zu können ist nach dem Beschleuniger ein \ang{90} Ablenkmagnet angebracht, der funktioniert, wie der auf der Niederenergieseite.
+Um einzelne Ionsorten detektieren zu können ist nach dem Beschleuniger ein \ang{90} Ablenkmagnet angebracht, der funktioniert wie der auf der Niederenergieseite.
 Im Faraday-Cup werden dann die auftreffenden Ströme gemessen, die bei einem bestimmten Strom durch die Spule durch die abgelenkten Ionen entsteht.
 Da durch diese Massenfilterung nur Teilchen mit der gewählten Masse weiterkommen, wurden für die BeO-Probe folgende Ionen als möglich erachtet:
 \begin{table}[H]
@@ -247,7 +247,7 @@ Da durch diese Massenfilterung nur Teilchen mit der gewählten Masse weiterkomme
 \end{table}
 Zu erwarten sind noch andere Ionen, die aus Verschmutzungen der Probe oder bisher unerkannten Ionen stammen könnten.
 Vor dem Beschleuniger gab es oft den Fall, dass für eine Ionenmasse eine Vielzahl an Ionenspezies möglich sein können.
-Da viele der Ionen, die aus mehreren Atomen bestehen im Beschleuniger aufbrechen, gibt es danach nur noch atomare Ionen.
+Da viele der Ionen, die aus mehreren Atomen bestehen, im Beschleuniger aufbrechen, gibt es danach nur noch atomare Ionen.
 Diese können dafür aber in verschiedenen Ladungszuständen auftreten.
 
 Mit Formel \ref{Auswertung_eq_Magnet} können wir jetzt wieder über die Verhältnisse der Magnetfelder auf die Ionenmassen schließen.
@@ -322,7 +322,7 @@ Um diese für andere Strahlen zu erfassen ist in der Tabelle für jeden identifi
     \label{highenergy}
 \end{table}
 
-Die neuen vorhandenen Ionen lassen sich durch natürliches Vorhandensein im Quarz oder Verschmutzungen durch die Luft ( $^{15}$N) erklären.
+Die neuen vorhandenen Ionen lassen sich durch natürliches Vorhandensein im Quarz oder Verschmutzungen durch die Luft ($^{15}$N) erklären.
 Nicht beachtet wurden hier die verschiedenen Sauerstoffisotope oder andere mögliche Isotope, da diese relativ selten sind und die Unterschiede im Massen-Ladungs Verhältnis in Tabelle \ref{highenergy} ohnehin recht gering sind.
 Prinzipiel wäre es durch Kenntnis des Magneten mit der Formel \ref{HE_ion} auch möglich, direkt die erwartete Stromstärke eines Ions zu berechnen und somit auf die Ionen zu schließen. Ebenfalls könnte man umgekehrt für alle Ladungszustände die aus den Stromstärken folgenden Massen bestimmen.
 Dabei wäre es jedoch jeweils nachteilig, dass ohne Verhältnissbildung die Unsicherheiten der Messung weniger eliminiert werden, welche uns nicht bekannt sind.
